- Fixed comment moderation buttons alignment. - Fixed alignment of categories in disp=catdir - Fixed comment status alignment on small screens - Fixed comment author type to use Bootstrap label

--- a/assets/css/content.less
+++ b/assets/css/content.less
@@ -465,3 +465,24 @@
    }
 
 }
+
+
+// Comments
+// ======================================================================== /
+.evo_comment {
+    .panel-title {
+        .evo_status {
+            margin-left: 5px;
+            @media screen and ( max-width: 575.98px ) {
+                &:before {
+                    display: block;
+                    content: " ";
+                }
+                float: none !important;
+                display: inline-block;
+                margin-left: 0;
+                margin-top: 5px;
+            }
+        }
+    }
+}
